prusti-tests/tests/verify/ui/counterexamples/enums-3.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/enums-3.rs:11:11
   |
11 | #[ensures(result)]
   |           ^^^^^^
   |
note: the error originates here
  --> $DIR/enums-3.rs:12:1
   |
12 | / fn test1(x: Something) -> bool {
13 | |     !matches!(x, Something::Third)
14 | | }
   | |_^
note: counterexample for "x"
        initial value: Something::Third
        final value:   Something::Third
  --> $DIR/enums-3.rs:12:10
   |
12 | fn test1(x: Something) -> bool {
   |          ^
note: counterexample for result
        final value:   false
  --> $DIR/enums-3.rs:12:27
   |
12 | fn test1(x: Something) -> bool {
   |                           ^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/enums-3.rs:16:11
   |
16 | #[ensures(result)]
   |           ^^^^^^
   |
note: the error originates here
  --> $DIR/enums-3.rs:17:1
   |
17 | / fn test2(x: Something, y: Something) -> bool {
18 | |     matches!(x, Something::First) || !matches!(y, Something::First)
19 | | }
   | |_^
note: counterexample for "x"
        initial value: Something::Second
        final value:   Something::Second
  --> $DIR/enums-3.rs:17:10
   |
17 | fn test2(x: Something, y: Something) -> bool {
   |          ^
note: counterexample for "y"
        initial value: Something::First
        final value:   Something::First
  --> $DIR/enums-3.rs:17:24
   |
17 | fn test2(x: Something, y: Something) -> bool {
   |                        ^
note: counterexample for result
        final value:   false
  --> $DIR/enums-3.rs:17:41
   |
17 | fn test2(x: Something, y: Something) -> bool {
   |                                         ^^^^

error: aborting due to 2 previous errors

